--- a/style.css
+++ b/style.css
@@ -2,230 +2,163 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     background-color: black;
-    color:white;
-    overflow:hidden;
+    color: white;
+    overflow: hidden;
 }
-.main{
-    display:flex;
-    height:100vh;
-    padding:0.5rem;
-}
-.sidebar{
-    background-color:#000;
-    width:300px;
-    border-radius:1rem;
-    margin-right:0.5rem;
 
+.main {
+    display: flex;
+    height: 100vh;
+    padding: 0.5rem;
 }
-.main-content{
-    background-color:#121212;
-    flex:1;
-    border-radius:1rem;
-    overflow:auto;
-    padding:0 0.5rem 0 0.5rem;
-}
-.music-player{
-    background-color:black;
-    position:fixed;
-    bottom:0px;
-    height:72px;
-    width:100%;
-}
-a{
-    text-decoration:none;
-    color:white;
-}
-.nav{
-    background-color:#121212;
-    border-radius:1rem;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    height:100px;
-    padding:0.5rem 0.75rem;
-}
-.nav-option{
-    line-height:2.5rem;
-    opacity:0.7;
-    padding:0.5rem 0.75rem;
-}
-.nav-option:hover{
-    opacity:1;
-}
-.nav-option i{
-    font-size:1.25rem;
-}
-.nav-option a{
-    font-size:1rem;
-    margin-left:1rem;
-}
-.library{
-    background-color:#121212;
-    border-radius:1rem;
-    height:100%;
-    margin-top:0.2rem;
-    padding:0.2rem 0.75rem;
-}
-.options{
-    display:flex;
-    justify-content:space-between;
-}
-.lib-option i{
-    height:1.25rem;
-    width:1.25rem;
-}
-.icons{
-    margin-top:1rem;
-    font-size:1.25rem;
-}
-.icons i{
-    opacity:0.7;
-    margin-right:1 rem;
-}
-.icons i:hover{
-    opacity:1
-}
-.box{
-    background-color:#232323;
-    height:12rem;
-    margin:0.2rem 0 0.2rem 0;
-    padding:0.75rem 1rem;
 
+.sidebar {
+    background-color: #000;
+    width: 300px;
+    border-radius: 1rem;
+    margin-right: 0.5rem;
 }
-.box-p1{
-    font-size:1rem;
-    font-weight:500;
+
+.main-content {
+    background-color: #121212;
+    flex: 1;
+    border-radius: 1rem;
+    overflow: auto;
+    padding: 0 1rem;
 }
-.box-p2{
-    font-size:0.75rem;
-    opacity:0.9;
+
+.music-player {
+    background-color: black;
+    position: fixed;
+    bottom: 0;
+    height: 72px;
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
-.badge{
-    background-color:#ffff;
-    border:none;
-    border-radius:100px;
-    padding:0.25rem 1rem;
-    font-weight:700;
-    margin-top:0.5rem;
-    height:2rem;
-    width:fit-content;
+
+a {
+    text-decoration: none;
+    color: white;
 }
-.dark-badge{
-    background-color:#000;
-    color:#fff;
+
+.nav {
+    background-color: #121212;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100px;
+    padding: 0.5rem 0.75rem;
 }
+
+.nav-option {
+    line-height: 2.5rem;
+    opacity: 0.7;
+}
+
+.nav-option:hover {
+    opacity: 1;
+}
+
+.library {
+    background-color: #121212;
+    border-radius: 1rem;
+    height: 100%;
+    margin-top: 0.5rem;
+    padding: 0.5rem;
+}
+
+.icons i {
+    margin-right: 1rem;
+    opacity: 0.7;
+}
+
+.icons i:hover {
+    opacity: 1;
+}
+
+.box {
+    background-color: #232323;
+    padding: 1rem;
+    border-radius: 0.75rem;
+    margin-bottom: 1rem;
+}
+
+.badge {
+    background-color: white;
+    border: none;
+    border-radius: 100px;
+    padding: 0.25rem 1rem;
+    font-weight: 700;
+}
+
+.dark-badge {
+    background-color: black;
+    color: white;
+}
+
 .sticky-nav {
-    display:flex;
-    background-color:#121212;
-    position:sticky;
-    top:0;
-    justify-content:space-between;
-    align-items:center;
-    padding:1rem 0 1rem 0;
-    z-index:10;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: #121212;
+    padding: 1rem;
+    z-index: 10;
 }
-.sticky-nav-icons{
-    margin-left:0.75rem;
+
+.sticky-nav-options {
+    display: flex;
+    align-items: center;
 }
-.sicky-nav-options{
-    display:flex;
-    justify-content:center;
-    align-items:center;
+
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
 }
-.nav-item{
-    margin-right:1rem;
+
+.card {
+    background-color: #232323;
+    width: 200px;
+    border-radius: 0.75rem;
+    padding: 1rem;
+    margin: 1rem;
 }
-@media (max-width:1000px){
-    .hide{
-        display:none;
-    }
+
+.card-image {
+    width: 100%;
+    border-radius: 0.5rem;
 }
-.card{
-    background-color:#232323;
-    width:24%;
-    border-radius:0.5px;
-    padding:1rem;
-    margin-left:1.5rem;
-    margin-top:1rem;
+
+.player {
+    width: 50%;
+    margin: auto;
 }
-.cards-container{
-    display:flex;
-    flex-wrap:wrap;
+
+.player-control {
+    display: flex;
+    justify-content: center;
 }
-.card-image{
-    width:80%;
-    border-radius:0.5px;
+
+.player-control-icon {
+    height: 1.2rem;
+    margin-right: 1.5rem;
+    opacity: 0.7;
 }
-.card-title{
-    font-weight:600;
-    font-size:1.5rem;
+
+.player-control-icon:hover {
+    opacity: 1;
 }
-.card-info{
-    font-size:1rem;
-    opacity:0.8;
+
+.playback-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.footer{
-    height:300px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
+
+.progress-bar {
+    width: 70%;
 }
-.line{
-    width:90%;
-    height:50%;
-    border-top:1px solid white;
-    opacity:0.8;
-}
-.music-player{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-}
-.album{
-    width:25%;
-    background-color:pink
-}
-.player{
-    width:50%;
-}
-.controls{
-    width:25%;
-    background-color:orange;
-}
-.player-control-icon{
-    height:1rem;
-    margin-right:1.75rem;
-    opacity:0.7;
-}
-.player-control{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-}
-.player-control-icon:hover{
-    opacity:1;
-}
-.playback-bar{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-}
-.progress-bar{
-    width:70%;
-    appearance:none;
-    background-color:transparent;
-    cursor:pointer;
-}
-.progress-bar::-webkit-slider-runnable-track{
-    background-color:#ddd;
-    border-radius:100px;
-    height:0.2rem;
-}
-.progress-bar::-webkit-slider-thumb{
-    appearance:none;
-    height:1rem;
-    width:1rem;
-    background-color:#1bd760;
-    border-radius:50%;
-    margin-top:-6px;
-}
+
